[package]
name = "string-template-plus"
version = "0.1.0"
edition = "2021"
authors = ["Gaurav Atreya"]
description = "Render string template with more options"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.5"
subprocess = "0.2.9"
