[package]
name = "string-template-plus"
version = "0.3.5"
edition = "2021"
authors = ["Gaurav Atreya"]
description = "Render string template with more options"
repository = "https://github.com/Atreyagaurav/string-template-plus"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["parsing", "string", "template"]
categories = ["template-engine", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
colored = "2.0.4"
lazy_static = "1.4.0"
regex = "1.9.5"
subprocess = "0.2.9"
titlecase = "2.2.1"

[lib]
name = "string_template_plus"
path = "src/lib.rs"

[[bin]]
name = "string-template-plus-visualize"
path = "src/bin/visual-test.rs"